# agenvo

./: Cargo.toml  README.md  SKILL.md  pyproject.toml
.github/workflows/: homebrew-publish.yml  npm-publish.yml  pypi-publish.yml  release.yml  rust-ci.yml
agenvo-cli/: Cargo.toml
agenvo-cli/src/: main.rs
agenvo-core/: Cargo.toml
agenvo-core/src/: lib.rs
agenvo-core/tests/: protocol.rs
npm/: package.json
scripts/: build_npm_package.py  prepare_cargo_release.py  stage_npm_packages.py  stage_pypi_packages.py
