[workspace]
members = ["agenvo-core", "agenvo-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Xuanwo/agenvo"
homepage = "https://github.com/Xuanwo/agenvo"

[workspace.dependencies]
agenvo-core = { version = "=0.1.0", path = "agenvo-core" }
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
opendal = { version = "0.57.0", default-features = false, features = ["executors-tokio", "reqwest-rustls-tls", "services-fs", "services-s3"] }
jiff = "0.2.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["v7"] }
