[package]
name = "agenvo-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI for the Agenvo room protocol"
readme = "../README.md"

[[bin]]
name = "agenvo"
path = "src/main.rs"

[dependencies]
agenvo-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
