[package]
name = "agenvo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Agenvo room protocol storage and rendering"
readme = "../README.md"

[dependencies]
jiff = { workspace = true }
opendal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
